site favicon update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:url" content="">
 	<meta property="og:image" content="">
  	<!-- css files -->
- 	<link rel="icon" href="assets/images/favicon.png">
+ 	<link rel="icon" type="image/png" href="assets/images/favicon.png">
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/fontawesom.min.css">
